--- a/Train using Custom Class.ipynb
+++ b/Train using Custom Class.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a59a1b6c",
+   "id": "e19d38f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a6132254",
+   "id": "2fd3d90c",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eb41db80",
+   "id": "5d9cd6f3",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0441fca1",
+   "id": "c2b6b7c9",
    "metadata": {},
    "outputs": [
     {
@@ -136,8 +136,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "e6a3e8b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From E:\\Users\\eboyc\\anaconda3\\envs\\tensorf\\lib\\site-packages\\tensorflow\\python\\training\\tracking\\tracking.py:111: Model.state_updates (from tensorflow.python.keras.engine.training) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "This property should not be used in TensorFlow 2.0, as updates are applied automatically.\n",
+      "WARNING:tensorflow:From E:\\Users\\eboyc\\anaconda3\\envs\\tensorf\\lib\\site-packages\\tensorflow\\python\\training\\tracking\\tracking.py:111: Layer.updates (from tensorflow.python.keras.engine.base_layer) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "This property should not be used in TensorFlow 2.0, as updates are applied automatically.\n",
+      "INFO:tensorflow:Assets written to: models/classrng/model\\assets\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.save('models/classrng')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7337d5b0",
+   "id": "37aee794",
    "metadata": {},
    "outputs": [],
    "source": []
