--- a/Training Model.ipynb
+++ b/Training Model.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "30a6e483",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "5996853b",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
        " array([1., 0.]))"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,9 +507,150 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "655c11fd",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "Load model and make a prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9994a3e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_2\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_14 (Dense)             (None, 1600)              100800    \n",
+      "_________________________________________________________________\n",
+      "dense_15 (Dense)             (None, 400)               640400    \n",
+      "_________________________________________________________________\n",
+      "dense_16 (Dense)             (None, 133)               53333     \n",
+      "_________________________________________________________________\n",
+      "dense_17 (Dense)             (None, 44)                5896      \n",
+      "_________________________________________________________________\n",
+      "dense_18 (Dense)             (None, 14)                630       \n",
+      "_________________________________________________________________\n",
+      "dense_19 (Dense)             (None, 4)                 60        \n",
+      "_________________________________________________________________\n",
+      "dense_20 (Dense)             (None, 2)                 10        \n",
+      "=================================================================\n",
+      "Total params: 801,129\n",
+      "Trainable params: 801,129\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = tf.keras.models.load_model('models/rngenerated/model')\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "03846f8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.PlayerEncoder at 0x1f76816ef70>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "penc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b10ac10b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.  ,  1.  ,  1.  ,  1.  ,  1.  ,  1.  ,  1.  ,  1.  ,  0.  ,\n",
+       "        0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,\n",
+       "        0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,\n",
+       "        0.  ,  1.  ,  1.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  0.  ,\n",
+       "        0.  ,  0.  ,  0.  ,  0.  ,  0.  ,  1.  ,  0.  ,  0.  ,  8.  ,\n",
+       "        2.  ,  0.  ,  3.  , 30.  , 15.  , 75.  ,  1.  ,  1.25,  4.5 ,\n",
+       "        4.5 , 25.  ,  2.  ,  1.  ,  2.  ,  2.  ,  1.  ,  1.  ])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = convert_match_result(matches[0])\n",
+    "res[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "92339899",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.52485067, 0.47514942]], dtype=float32)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(np.array([res[0]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "423b3d21",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 0.])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res[1]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4d2820f",
+   "id": "ee163c3f",
    "metadata": {},
    "outputs": [],
    "source": []
