Move custom class file to flask folder

--- a/Making Rankings.ipynb
+++ b/Making Rankings.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "id": "acc9b07f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from itertools import combinations\n",
-    "from custom_classes import Predictor"
+    "from Flaskapp.custom_classes import Predictor"
    ]
   },
   {
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "16693ae6",
+   "id": "c20e51ec",
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "950e8765",
+   "id": "fedb901f",
    "metadata": {},
    "source": [
     "Now that some example matches are paired with the expected winners, sums can be taken and a leaderboard constructed."
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "2f484352",
+   "id": "4d119ca6",
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "a585af7f",
+   "id": "c4806a32",
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bdb4fef",
+   "id": "dd583462",
    "metadata": {},
    "source": [
     "In reality, the underlying player order has higher player numbers at a higher skill than lower player numbers. That's not totally reflected here, but that could easily be an issue with my data rather than the system as a whole. This is something that at least looks like a leaderboard, so I'm happy with keeping it like this"
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7791feb6",
+   "id": "7859d6fb",
    "metadata": {},
    "outputs": [],
    "source": []
