--- a/Rankings from Custom Class.ipynb
+++ b/Rankings from Custom Class.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "4abdf9f7",
+   "execution_count": 5,
+   "id": "7ad4069b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from custom_classes import Predictor"
+    "from Flaskapp.custom_classes import Predictor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "481ff422",
+   "execution_count": 6,
+   "id": "e2fe79e5",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "afa2accc",
+   "id": "71468f05",
    "metadata": {},
    "outputs": [
     {
@@ -118,14 +118,14 @@
     "    'long_tasks': 3,\n",
     "    'short_tasks': 5\n",
     "}\n",
-    "leaders = model.get_leaders(match_settings)\n",
+    "leaders = model.get_leaders(match_settings, verbose=True)\n",
     "leaders"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d71e03af",
+   "id": "dbe34a8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c37865dd",
+   "id": "42646ded",
    "metadata": {},
    "source": [
     "Results are actually very inconsistent. This could be due to the fact that I'm generating the data randomly, or that I'm taking such a small subset of possible games when counting wins."
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc3072bd",
+   "id": "60d79912",
    "metadata": {},
    "outputs": [],
    "source": []
