--- a/Train using Custom Class.ipynb
+++ b/Train using Custom Class.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from custom_classes import Predictor"
+    "from Flaskapp.custom_classes import Predictor"
    ]
   },
   {
